more what is good testability

--- a/kandi/malli.tex
+++ b/kandi/malli.tex
@@ -360,13 +360,17 @@ Testattavuus tulee esille arkkitehtuurisella tasolla hieman erilailla, kun ohjel
 
 Arkkitehtuuriset tyylit parantavat järjestelmän järjestelmän laadullisia ominaisuuksia ja tuovat järjestelmään yhdenmukaisen konseptin, jota koko järjestelmän toteutus noudattaa. Erilaiset tyylit paranantavat myös erilaisia testausstrategioita \citep[s. 66]{Eickelmann:1996:MOS:243327.243602}. 
 
-\subsection{Hyvä testattavuus arkkitehtuurissa?}
+\subsection{Hyvä testattavuus arkkitehtuurissa}
 
 %Tietyt arkkitehtuuriset tyylit sopivat tiettyihin testaustapoihin (critical module, sandwich, top-down, bottom-up, thread, big bang) \citep{Eickelmann:1996:MOS:243327.243602}. Kolmeen ensimmäiseen liittyvät vahvasti stubit ja test driverit. 
 
 %Testattavuuden parantaminen erillisen patternin avulla \citep{coelho_improving_2005}.
 
-Hyvään testattavuuteen arkkitehtuurisella tasolla vaikuttaa paljon oikean tyylin vaikuttaminen oikeaan tilanteeseen ja niiden täsmällinen noudattaminen. 
+Hyvään testattavuuteen arkkitehtuurisella tasolla vaikuttaa paljon oikean tyylin valitseminen oikeaan tilanteeseen ja tyylien tuomien rajoitteiden oikeaoppinen noudattaminen. 
+
+Testauksessa luotavien testien isolaation mahdollistaminen sekä hallittavuus ja havaittavuus, ovat merkkejä hyvästä testattavuudesta myös arkkitehtuurisella tasolla.
+
+Hyvä testattavuus -> monitoroitavuus (komponenttien Built-In-Test) \citep{mari_impact_2003}. 
 
 
 
