--- a/kandi/references-fi.bib
+++ b/kandi/references-fi.bib
@@ -183,6 +183,16 @@ month={Sept}
 
 % yleinen testattavuus
 
+@inproceedings{mari_impact_2003,
+	title = {The impact of maintainability on component-based software systems},
+	pages = {25--32},
+	booktitle = {Euromicro Conference, 2003. Proceedings. 29th},
+	publisher = {{IEEE}},
+	author = {Mari, Matinlassi and Eila, Niemelä},
+	urldate = {2016-02-25},
+	date = {2003}
+}
+
 @INPROCEEDINGS{Jungmayr:2002, 
 author={S. Jungmayr}, 
 booktitle={Software Maintenance, 2002. Proceedings. International Conference on}, 
