--- a/kandi/references-fi.bib
+++ b/kandi/references-fi.bib
@@ -193,6 +193,27 @@ month={Sept}
 	date = {2003}
 }
 
+@article{Khan:2009:MBT:1507195.1507204,
+ author = {Khan, R. A. and Mustafa, K.},
+ title = {Metric Based Testability Model for Object Oriented Design (MTMOOD)},
+ journal = {SIGSOFT Softw. Eng. Notes},
+ issue_date = {March 2009},
+ volume = {34},
+ number = {2},
+ month = feb,
+ year = {2009},
+ issn = {0163-5948},
+ pages = {1--6},
+ numpages = {6},
+ url = {http://doi.acm.org/10.1145/1507195.1507204},
+ doi = {10.1145/1507195.1507204},
+ acmid = {1507204},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {design, metrics, model, object oriented, software characteristics, software testability},
+} 
+
+
 @INPROCEEDINGS{Jungmayr:2002, 
 author={S. Jungmayr}, 
 booktitle={Software Maintenance, 2002. Proceedings. International Conference on}, 
