--- a/kandi/references-fi.bib
+++ b/kandi/references-fi.bib
@@ -190,7 +190,7 @@ month={Sept}
 	publisher = {{IEEE}},
 	author = {Mari, Matinlassi and Eila, Niemelä},
 	urldate = {2016-02-25},
-	date = {2003}
+	year = {2003}
 }
 
 @article{Khan:2009:MBT:1507195.1507204,
@@ -210,7 +210,7 @@ month={Sept}
  acmid = {1507204},
  publisher = {ACM},
  address = {New York, NY, USA},
- keywords = {design, metrics, model, object oriented, software characteristics, software testability},
+ keywords = {design, metrics, model, object oriented, software characteristics, software testability}
 } 
 
 
@@ -282,7 +282,7 @@ month={Sept}
 	publisher = {{IEEE}},
 	author = {Voas, Jeffrey M. and Miller, Keith W.},
 	urldate = {2016-03-02},
-	date = {1992}
+	year = {1992}
 }
 
 % design pattern testattavuus
@@ -294,7 +294,7 @@ month={Sept}
 	publisher = {{IEEE}},
 	author = {Baudry, Benoit and Traon, Yves Le and Sunyé, Gerson and Jézéquel, Jean-Marc},
 	urldate = {2016-03-05},
-	date = {2003}
+	year = {2003}
 }
 
 @inproceedings{baudry_testability_2002,
@@ -305,7 +305,7 @@ month={Sept}
 	pages = {54--63},
 	booktitle = {Eighth {IEEE} Symposium on Software Metrics, 2002. Proceedings},
 	author = {Baudry, B. and Traon, Y. Le and Sunye, G.},
-	date = {2002},
+	year = {2002},
 	keywords = {class interaction, Collaboration, Computer architecture, constraint specifications, control flows, Costs, design-for-testability, diagrams, formal specification, Life testing, object oriented designs, object-oriented programming, program testing, software architecture, Software design, Software Engineering, Software testing, specification languages, System testing, testability, {UML} class diagram, Unified modeling language},
 	file = {IEEE Xplore Abstract Record:files/21/abs_all.html:text/html;IEEE Xplore Full Text PDF:files/20/Baudry et al. - 2002 - Testability analysis of a UML class diagram.pdf:application/pdf}
 }
@@ -355,7 +355,7 @@ month={May}
 	publisher = {{ACM} Press},
 	author = {de Andrade, Hugo Sica and Almeida, Eduardo and Crnkovic, Ivica},
 	urldate = {2016-03-05},
-	date = {2014},
+	year = {2014},
 	langid = {english},
 	file = {a12-de_andrade.pdf:files/17/a12-de_andrade.pdf:application/pdf}
 }
@@ -367,7 +367,7 @@ month={May}
 	publisher = {Springer},
 	author = {Garcia, Joshua and Popescu, Daniel and Edwards, George and Medvidovic, Nenad},
 	urldate = {2016-03-05},
-	date = {2009}
+	year = {2009}
 }
 
 @inproceedings{garcia_identifying_2009,
