--- a/kandi/malli.tex
+++ b/kandi/malli.tex
@@ -411,14 +411,14 @@ Näiden lisäksi \citep{Jungmayr:2002} käsittelee testauksen kannalta kriittist
 % Mitä huono testattavuus voi tarkoittaa järjestelmän kannalta?
 %Huono testattavuus voi tarkoittaa järjestelmän kannalta ylläpidettävyyden huononemista ja täten aiheuttaa jatkuvaa ongelmaa kehityksen kannalta, koska testaus on usein tapahtuvaa toimintaa, jonka tarkoituksena on löytää vikoja järjestelmästä. Myöhäisessä vaiheessa löydetty vika saattaa tulla erittäin kalliiksi ja viedä pois useita työtunteja, jotka olisi pystytty käyttämään johonkin tuottavampaan tekemiseen, jos vaikeasti testattava järjestelmä ei olisi ongelman löytämistä hidastanut.
  
-On selvää, että edellä mainitut asiat tarkastelevat korkeammalla tasolla testattavuutta, kuin aiemmat lähdekoodi-tasoiset mittarit. Ne mittaavat esimerkiksi komponenttien ominaisuuksia ja yhteyksiä, jotka tulevat esille kunnolla vasta arkkitehtuurisella tasolla. Komponenttien ja yhteyksien tarkastelu oli myös luvussa \ref{ark} esitelty eräs näkemys ohjelmistoarkkitehtuuriin. Onkin järjestelmän todellisen testattavuuden määrittelemisen kannalta parempi tarkastella järjestelmää tällä korkeammalla tasolla.
+Löydetyistä mittareista huomataan, että ne tarkastelevat korkeammalla tasolla testattavuutta, kuin aiemmat lähdekoodi-tasoiset mittarit. Ne mittaavat esimerkiksi komponenttien ominaisuuksia ja yhteyksiä, jotka tulevat esille kunnolla vasta arkkitehtuurisella tasolla. Komponenttien ja yhteyksien tarkastelu oli myös luvussa \ref{ark} esitelty eräs näkemys ohjelmistoarkkitehtuuriin. On järjestelmän todellisen testattavuuden määrittelemisen kannalta parempi, jos sitä tarkastellaan korkeammalla tasolla, koska liian tarkka kuvaus järjestelmästä vaikeuttaa todellisten ongelmien näkemistä.  
 
 \section{Arkkitehtuurin vaikutus testattavuuteen}
 
-Testattavuus tulee esille arkkitehtuurisella tasolla hieman eri lailla kuin ohjelmakooditasolla, ja usein on niin, että ohjelmakoodia ei tietyllä hetkellä ole edes saatavilla tai sen täydellinen läpikäynti veisi paljon aikaa. Arkkitehtuurisella tasolla testattavuus vaikuttaa laajemmin ja sitä voidaan tutkia komponenttitasolla, jota tukevat hyvin UML-kaaviot. UML-kaavioiden avulla ohjelmistojärjestelmän rakenne myös arkkitehtuurisena mallina saadaan hyvin kuvattua eritasoisilla näkymillä ja näkökulmilla. Tämä käy arkkitehtuurin arvioimiseen testattavuuden kannalta hyvin, koska testattavuus tulee ilmi korkealla tasolla integraatiotestauksen aikana, kun komponenttien rajapintojen toimivuus sekä komponenttien toimivuus pitää validoida \citep[s. 65]{Eickelmann:1996:MOS:243327.243602}.
+Testattavuus tulee esille arkkitehtuurisella tasolla hieman eri lailla kuin ohjelmakooditasolla, ja usein on niin, että ohjelmakoodia ei tietyllä hetkellä ole edes saatavilla tai sen täydellinen läpikäynti veisi paljon aikaa. Arkkitehtuurisella tasolla testattavuus vaikuttaa laajemmin ja sitä voidaan tutkia komponenttitasolla, jota tukevat hyvin UML-kaaviot. UML-kaavioiden avulla ohjelmistojärjestelmän rakenne, myös arkkitehtuurisena mallina, saadaan hyvin kuvattua eritasoisilla näkymillä. Tämä käy arkkitehtuurin arvioimiseen testattavuuden kannalta hyvin, koska testattavuus tulee ilmi korkealla tasolla muunmuassa integraatiotestauksen aikana, kun komponenttien rajapintojen toimivuus sekä komponenttien toimivuus pitää validoida \citep[s. 65]{Eickelmann:1996:MOS:243327.243602}.
 
 
-Arkkitehtuuriset tyylit parantavat järjestelmän laadullisia ominaisuuksia ja tuovat järjestelmään yhdenmukaisen konseptin, jota koko järjestelmän toteutus noudattaa. Erilaiset tyylit parantavat myös erilaisia testausstrategioita \citep[s. 66]{Eickelmann:1996:MOS:243327.243602}. 
+%Arkkitehtuuriset tyylit parantavat järjestelmän laadullisia ominaisuuksia ja tuovat järjestelmään yhdenmukaisen konseptin, jota koko järjestelmän toteutus noudattaa. Erilaiset tyylit parantavat myös erilaisia testausstrategioita \citep[s. 66]{Eickelmann:1996:MOS:243327.243602}. 
 
 \subsection{Hyvä testattavuus arkkitehtuurissa}
 
@@ -426,11 +426,11 @@ Arkkitehtuuriset tyylit parantavat järjestelmän laadullisia ominaisuuksia ja t
 
 %Testattavuuden parantaminen erillisen patternin avulla \citep{coelho_improving_2005}.
 
-Hyvään testattavuuteen arkkitehtuurisella tasolla vaikuttaa paljon oikean tyylin valitseminen oikeaan tilanteeseen ja tyylien tuomien rajoitteiden oikeaoppinen noudattaminen \citep{Eickelmann:1996:MOS:243327.243602}. Arkkitehtuuri on myös pitänyt dokumentoida jollain tavalla, jotta testattavuutta pystyttäisiin arvioimaan \citep[s. 6]{mari_impact_2003}. Itse testauksessa luotavien testien isolaation mahdollistaminen sekä hallittavuus ja havaittavuus, jotka ovat myös ohjelmakooditasolla tärkeitä, ovat merkkejä hyvästä testattavuudesta arkkitehtuurisella tasolla.
+Hyvään testattavuuteen arkkitehtuurisella tasolla vaikuttaa paljon oikean tyylin valitseminen oikeaan tilanteeseen ja tyylien tuomien rajoitteiden oikeaoppinen noudattaminen \citep[s. 66]{Eickelmann:1996:MOS:243327.243602}. Arkkitehtuuri on myös pitänyt dokumentoida jollain tavalla, jotta testattavuutta pystyttäisiin arvioimaan \citep[s. 6]{mari_impact_2003}. Dokumentoinnin avulla pystytään luomaan kehys, joka määrittelee järjestelmän arkkitehtuurisia päätöksiä ja rajoitteita. Se helpottaa vikojen paikallistamista ja testauksen painopisteiden määrittelyä kehittäjille, jos dokumentoinnissa on eksplisiittisesti kerrottu, että mitkä komponentit kuuluvat esimerkiksi kolmikerrosarkkitehtuurin eri tasoille. 
 
-%Hyvä testattavuus -> monitoroitavuus (komponenttien Built-In-Test) \citep{mari_impact_2003}. 
+%Testien isolaation mahdollistaminen sekä hallittavuus ja havaittavuus, jotka ovat myös ohjelmakooditasolla tärkeitä, ovat merkkejä hyvästä testattavuudesta arkkitehtuurisella tasolla.
 
-Järjestelmän tarkasteltavuus (monitorability) on yksi osatekijä ylläpidettävyydessä ja se vaikuttaa positiivisesti testattavuuteenkin \citep[s. 4]{mari_impact_2003}. Tarkasteltavuus voidaan jakaa kolmeen eri luokkaan: komponentin sisäinen, komponenttien välinen ja järjestelmätasoinen yhteistoiminnallisuus. Onkin siis testattavuuden kannalta hyvä, jos komponenteista löytyy aputoiminnallisuutta testausprosessia varten. Tämä toiminnallisuus voi koostua esimerkiksi ylimääräisistä testausrajapinnoista tai komponenteista, jotka tukevat jotain edellämainitusta kolmesta tarkasteltavuuden luokasta. Yksi todella yleinen käytänne on esimerkiksi erilaisten tynkäluokkien (stub) käyttö, joissa testausta varten voidaan polymorfismia käyttää hyödyksi niin, että vaativat luokan riippuvuudet saadaan korvattua testien ajaksi jollain yksinkertaisemmalla toteutuksella. Tämä ominaisuus vaatii järjestelmältä löyhiä riippuvuuksia rajapintojen muodossa.
+Järjestelmän tarkasteltavuus (monitorability) on yksi osatekijä ylläpidettävyydessä ja se vaikuttaa positiivisesti testattavuuteenkin \citep[s. 4]{mari_impact_2003}. Tarkasteltavuus voidaan jakaa kolmeen eri luokkaan: komponentin sisäinen, komponenttien välinen ja järjestelmätasoinen yhteistoiminnallisuus. On testattavuuden kannalta hyvä, jos komponenteista löytyy aputoiminnallisuutta testausprosessia varten. Tämä toiminnallisuus voi koostua esimerkiksi ylimääräisistä testausrajapinnoista tai komponenteista, jotka tukevat jotain edellämainitusta kolmesta tarkasteltavuuden luokasta. Yksi todella yleinen käytänne on esimerkiksi erilaisten tynkäluokkien (stub) käyttö, joissa testausta varten voidaan polymorfismia käyttää hyödyksi niin, että luokan ongelmalliset komponenttiriippuvuudet saadaan korvattua testien ajaksi jollain yksinkertaisemmalla toteutuksella. Tämän toteuttaminen vaatii järjestelmältä löyhiä riippuvuuksia rajapintojen muodossa.
 
 
 \subsection{Arkkitehtuurin testattavuuden mittaaminen}
